# uvdat

./: .copier-answers.resonant.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  docker_image.yml  nightly_ci.yml  release.yml
demo/: demo.env  demo.secrets.env  demo.web.env  docker-compose.yml  nginx.conf  web.Dockerfile
dev/: .env.docker-compose  .env.docker-compose-native  .env.web.example  Dockerfile  django.Dockerfile  postgres.Dockerfile
docs/: README.md  setup.md  testing.md
geoinsight/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
geoinsight/core/: admin.py  apps.py  notifications.py
geoinsight/core/migrations/: 0001_default_site.py  0006_alter_project_default_map_zoom.py  0010_layers_and_frames.py  0014_colormaps.py  0015_style_configs.py  0016_dataset_owner_and_tags.py  0017_merge.py
geoinsight/core/models/: __init__.py  chart.py  colormap.py  colormaps.json  data.py  dataset.py  file_item.py  layer.py  networks.py  project.py  regions.py  styles.py  task_result.py
geoinsight/core/rest/: __init__.py  access_control.py  analytics.py  chart.py  colormap.py  data.py  dataset.py  explorer.py  file_item.py  layer.py  networks.py  project.py  regions.py  serializers.py  user.py
geoinsight/core/tasks/: chart.py  conversion.py  data.py  dataset.py  networks.py  osmnx.py  regions.py
geoinsight/core/tests/: conftest.py  factories.py  factory_fixtures.py  test_analytics.py  test_dataset.py  test_ingest.py  test_load_roads.py  test_network.py  test_project.py  test_styles.py
geoinsight/settings/: base.py  development.py  heroku_production.py  testing.py
jupyter/: explorer.py  geoinsight_data_exploration.ipynb  geoinsight_explorer.py  requirements.txt  uvdat_explorer.py
sample_data/: boston_floods.json  charts.json  cities.json  contexts.json  datasets.json  dc_metro.json  flood_test.json  ingest_sample_data.py  ingest_sample_data_output.txt  ingest_sample_road_network.py  ingest_use_case.py  la_wildfires.json  multiframe_test.json  populate_server.py
sample_data/new_york_energy/: data.json  export_networks.py  import_networks.py  ingest.py  interpret_network.py  nysdp.py
sample_data/testRasters/: sample.json
sample_data/tests/: analytics.json  ingest.json
sample_data/use_cases/boston_floods/: charts.json  composite_orthoimagery.py  contexts.json  datasets.json  ingest.py  projects.json
sample_data/use_cases/curbs_aid/: datasets.json  projects.json
sample_data/use_cases/la_wildfires/: datasets.json  ingest.py  projects.json
sample_data/use_cases/new_york_energy/: contexts.json  datasets.json  export_networks.py  import_networks.py  ingest.py  interpret_network.py  nysdp.py  projects.json
sample_data/use_cases/sequentialTestRasters/: datasets.json  projects.json
sample_data/use_cases/test/: datasets.json  ingest.py  projects.json  singleFile.json
scripts/: .gitignore  raster_tile_request_stress_test.js
scripts/sentinelDownload/: .gitignore  README.md  sentinel2Download.py
terraform/: .terraform.lock.hcl  django.tf  main.tf  www.tf
uvdat/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
uvdat/core/: admin.py  apps.py  models.py  notifications.py  serializers.py  tasks.py  utils.py  views.py
uvdat/core/jupyter/: explorer.py  uvdat_data_exploration.ipynb
uvdat/core/migrations/: 0001_default_site.py  0001_models_redesign.py  0002_city_and_dataset.py  0002_nonunique_network_names.py  0002_vector_feature.py  0002_vector_features.py  0003_fileitem_optional.py  0003_processing_flag.py  (+27 more)
web/: .env.example  .eslintrc.js  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts  vue.config.js
web/public/: index.html
web/src/: App.vue  data.ts  drag.ts  layerStyles.ts  layers.ts  main.ts  networks.ts  panelFunctions.ts  shims-vue.d.ts  store.ts  storeFunctions.ts  themes.ts  types.ts  utils.js  utils.ts
(+172 files in other folders)
